20070428 code: fixed scan_u*b() undefined behaviour.
20070430 code: sig now uses ANSI C sa_handler prototype.
20070501 code: fd_seek now uses off_t.
20070501 package: sd_*.h and _sd*.h are now no longer installed, to prevent
                  any possibility of header collisions.
20070502 code: added array_index_ub() and array_size_ub() for io_poll
               library. second argument of array_cat() is now const.
20070504 code: IRIX mipspro fixes.
20070506 code: renamed set_alloc() functions to alloc_set_alloc() etc.
20070506 version: corelib 0.54
20070510 code: added fmt_pad functions.
20070519 code: removed dstring_cat0 and redundant if statement from dstring_0.
20070519 version: corelib 0.541
20070525 code: added dgetline.
20070525 code: added sgetline_size and sgetline_data.
20070527 code: added signed fmt_* equivalents. 'unsigned' filenames were
               renamed to 'signed' filenames and now unsigned and signed
               variants of functions reside in these new filenames. for
               example, fmt_ulong.c was renamed to fmt_long.c and now
               both fmt_ulong and fmt_long are defined in this file.
20070527 code: added signed scan_* equivalents, as with fmt.
20070527 code: rewrote all fmt tests.
20070527 version: corelib 0.55
20070528 code: signed variants of fmt_pad, using common macro core in
               fmt_pad.h
20070601 code: added scan_charsetn() and scan_notcharsetn().
20070606 code: added rmkdir().
20070607 code: added dgetline_setfd().
20070608 version: corelib 0.56
20070608 code: now using corelib-conf.c from common source.
20070612 code: compilation tools now produce dual architecture binaries on
               OS X by default.
20070613 code: reverted previous change - new cpj tools provide explicit
               cross compilation.
20070615 code: updated to new cpj tool and new sysdeps.
20070617 code: strange bug related to large signed constants on IA64.
               -0xffffffff == 1, -0xffffffffL == -0xffffffff.